@@ -1,3 +1,7 @@
+Mon Dec 20 14:14:08 1993  Gray Watson  (gray@fridge.antaire.com)
+
+	* Renamed dbg_tokens.h -> debug_tok.h and dbg_values.h -> debug_val.h
+
 Mon Dec 20 02:24:02 1993  Gray Watson  (gray at toaster.antaire.com)
 
 	* Added -V option to malloc_dbg and desc field for debug-token list.
@@ -606,5 +610,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray at toaster)
 	when MALLOC_ADDRESS was not working correctly.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.84 1993/12/20 07:28:46 gray Exp $
+$Id: ChangeLog,v 1.85 1993/12/20 19:15:13 gray Exp $
 -------------------------------------------------------------------------------
